add workspaces and projects methods