@@ -4,6 +4,7 @@ import org.springframework.validation.BindingResult;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * @author Yarullin Renat
@@ -17,7 +18,7 @@ public class ErrorUtils {
                             fieldError.getField() + "Error",
                             fieldError.getDefaultMessage()
                     ))
-                    .toList();
+                    .collect(Collectors.toList());
         }
         return errors;
     }
